--- a/.github/workflows/android-arm64-static.yml
+++ b/.github/workflows/android-arm64-static.yml
@@ -64,12 +64,12 @@ jobs:
             DESTDIR=/ make install prefix=/usr && \
             DESTDIR=/ make install_uapi_headers prefix=/usr
 
-        # 设置交叉编译环境
+        # 设置交叉编译环境 - 避免目录冲突
         RUN mkdir -p /usr/aarch64-linux-gnu/lib /usr/aarch64-linux-gnu/include && \
-            ln -sf /usr/include/bpf /usr/aarch64-linux-gnu/include/ && \
+            cp -r /usr/include/bpf /usr/aarch64-linux-gnu/include/ && \
             ln -sf /usr/lib64/libbpf.a /usr/aarch64-linux-gnu/lib/
 
-        # 创建简单的BCC环境
+        # 创建简单的BCC环境 - 避免软链接覆盖目录
         RUN git clone https://github.com/iovisor/bcc.git && \
             mkdir -p /usr/include/bcc && \
             mkdir -p /usr/include/bcc/compat && \
@@ -77,10 +77,10 @@ jobs:
             cp -r bcc/src/cc/api/* /usr/include/bcc/ 2>/dev/null || true && \
             cp -r bcc/src/cc/libbpf/* /usr/include/bcc/ 2>/dev/null || true && \
             cp -r bcc/src/cc/compat/* /usr/include/bcc/compat/ 2>/dev/null || true && \
+            cp -r /usr/include/bcc/* /usr/aarch64-linux-gnu/include/bcc/ 2>/dev/null || true && \
             touch dummy.c && \
             ar rcs /usr/lib/libbcc.a dummy.c && \
-            ln -sf /usr/lib/libbcc.a /usr/aarch64-linux-gnu/lib/ && \
-            ln -sf /usr/include/bcc /usr/aarch64-linux-gnu/include/
+            ln -sf /usr/lib/libbcc.a /usr/aarch64-linux-gnu/lib/
 
         WORKDIR /bpftrace
         EOF
@@ -98,108 +98,10 @@ jobs:
         echo "LLVM版本:"
         llvm-config --version
         echo "libbpf库版本:"
-        if [ -f "/usr/lib64/pkgconfig/libbpf.pc" ]; then
-            cat /usr/lib64/pkgconfig/libbpf.pc | grep Version
-        else
-            echo "找不到libbpf.pc"
-        fi
-
-        # 创建简化版CMakeLists.txt以绕过依赖检查
-        cat > simple_cmakelists.txt << 'CMAKETXT'
-        cmake_minimum_required(VERSION 3.8)
-        project(bpftrace)
-
-        set(CMAKE_CXX_STANDARD 17)
-        set(CMAKE_CXX_STANDARD_REQUIRED ON)
-        set(CMAKE_CXX_EXTENSIONS OFF)
-
-        # 基本设置
-        set(STATIC_LINKING ON)
-        set(BUILD_TESTING OFF)
-        set(ENABLE_MAN OFF)
-
-        # 依赖包设置
-        find_package(FLEX REQUIRED)
-        find_package(BISON REQUIRED)
-        find_package(ZLIB REQUIRED)
-        set(LIBBPF_INCLUDE_DIRS "/usr/include")
-        set(LIBBPF_LIBRARIES "/usr/lib64/libbpf.a")
-        set(LIBBCC_INCLUDE_DIRS "/usr/include")
-        set(LIBBCC_LIBRARIES "/usr/lib/libbcc.a")
+        ls -la /usr/lib64/libbpf* || echo "找不到libbpf库"
+        echo "BCC包含目录:"
+        ls -la /usr/include/bcc/ || echo "找不到BCC包含目录"
         
-        # LLVM设置
-        set(LLVM_INCLUDE_DIRS "/usr/lib/llvm-16/include")
-        set(LLVM_LIBRARY_DIRS "/usr/lib/llvm-16/lib")
-        set(LLVM_PACKAGE_VERSION "16.0.0")
-        
-        # 必要的标志
-        set(HAVE_BCC_KFUNC 1)
-        set(HAVE_BCC_USDT 1)
-        set(HAVE_BCC_CREATE_MAP 1)
-        set(HAVE_BCC_PROG_LOAD 1)
-        set(HAVE_LIBBPF_1 1)
-        set(HAVE_LIBBPF_MAP_BATCH 1)
-        set(HAVE_LIBBPF_UPROBE_MULTI 1)
-        
-        # 导入原始CMakeLists的子目录部分
-        add_subdirectory(src)
-        CMAKETXT
-
-        # 创建简化版的src/CMakeLists.txt
-        mkdir -p src_simple
-        cat > src_simple/CMakeLists.txt << 'SRCCMAKE'
-        include_directories(${CMAKE_SOURCE_DIR})
-        include_directories(${CMAKE_SOURCE_DIR}/src)
-        include_directories(${LIBBPF_INCLUDE_DIRS})
-        include_directories(${LIBBCC_INCLUDE_DIRS})
-        include_directories(${LLVM_INCLUDE_DIRS})
-
-        # 解析器生成
-        BISON_TARGET(bpftrace_parser parser.yy ${CMAKE_CURRENT_BINARY_DIR}/parser.tab.cc COMPILE_FLAGS "-v")
-        FLEX_TARGET(bpftrace_lexer lexer.l ${CMAKE_CURRENT_BINARY_DIR}/lex.yy.cc)
-        ADD_FLEX_BISON_DEPENDENCY(bpftrace_lexer bpftrace_parser)
-
-        # 这里添加所有必要的源文件
-        set(BPFTRACE_SRCS
-            ${CMAKE_CURRENT_BINARY_DIR}/parser.tab.cc
-            ${CMAKE_CURRENT_BINARY_DIR}/lex.yy.cc
-            attached_probe.cpp
-            bpffeature.cpp
-            bpftrace.cpp
-            btf.cpp
-            child.cpp
-            clang_parser.cpp
-            driver.cpp
-            main.cpp
-            mapkey.cpp
-            output.cpp
-            probe_matcher.cpp
-            procmon.cpp
-            printf.cpp
-            resolve_cgroupid.cpp
-            required_resources.cpp
-            requires.cpp
-            struct.cpp
-            tracefs.cpp
-            types.cpp
-            usdt.cpp
-            utils.cpp
-        )
-
-        add_executable(bpftrace ${BPFTRACE_SRCS})
-        target_link_libraries(bpftrace
-            ${LIBBPF_LIBRARIES}
-            ${LIBBCC_LIBRARIES}
-            ${LIBELF_LIBRARIES}
-            ${ZLIB_LIBRARIES}
-            -pthread
-            -static-libstdc++
-            -static-libgcc
-        )
-
-        install(TARGETS bpftrace DESTINATION bin)
-        SRCCMAKE
-
         # 创建交叉编译工具链文件
         cat > arm64_toolchain.cmake << 'CMAKEEOF'
         set(CMAKE_SYSTEM_NAME Linux)
@@ -230,103 +132,74 @@ jobs:
         set(LIBBPF_INCLUDE_DIRS /usr/include)
         CMAKEEOF
 
-        # 尝试使用简化的CMake配置构建
-        echo "尝试使用简化的CMake配置进行构建..."
-        mkdir -p build_simple
-        cp simple_cmakelists.txt build_simple/CMakeLists.txt
-        mkdir -p build_simple/src
-        cp src_simple/CMakeLists.txt build_simple/src/
+        # 备份原始CMakeLists.txt
+        cp -f CMakeLists.txt CMakeLists.txt.orig
         
-        # 复制所有必要的源文件
-        cp -r src/* build_simple/src/
-        cp -r resources build_simple/
+        # 修改CMakeLists.txt跳过版本检查
+        sed -i 's/if(LLVM_VERSION VERSION_LESS "16" OR LLVM_VERSION VERSION_GREATER "20")/if(FALSE)/g' CMakeLists.txt
         
-        cd build_simple
-        cmake -DCMAKE_TOOLCHAIN_FILE=../arm64_toolchain.cmake \
-              -DCMAKE_BUILD_TYPE=Release \
-              -DBUILD_TESTING=OFF \
-              -DENABLE_MAN=OFF \
-              -DSTATIC_LINKING=ON
+        # 修改libbpf检查
+        sed -i 's/if(NOT LIBBPF_FOUND)/if(FALSE)/g' CMakeLists.txt
         
+        # 修改libbpf版本检查
+        sed -i 's/message(FATAL_ERROR "bpftrace requires libbpf 1.5 or greater")/message(STATUS "Skipping libbpf version check")/g' CMakeLists.txt
+        
+        # 创建构建目录
+        mkdir -p build-android-arm64
+        cd build-android-arm64
+        
+        # 配置bpftrace构建
+        LLVM_REQUESTED_VERSION=16 cmake .. \
+          -DCMAKE_TOOLCHAIN_FILE=../arm64_toolchain.cmake \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DBUILD_TESTING=OFF \
+          -DENABLE_MAN=OFF \
+          -DUSE_SYSTEM_BPF_BCC=OFF \
+          -DENABLE_LIBDW=OFF \
+          -DENABLE_SKP_DWARF=OFF \
+          -DENABLE_LLVM_JIT=OFF \
+          -DLIBBPF_LIBRARIES=/usr/lib64/libbpf.a \
+          -DLIBBPF_INCLUDE_DIRS=/usr/include \
+          -DLIBBCC_LIBRARIES=/usr/lib/libbcc.a \
+          -DLIBBCC_INCLUDE_DIRS=/usr/include \
+          -DHAVE_LIBBCC_PERF_READER_OPEN_PERF_EVENT=OFF \
+          -DHAVE_BCC_PROG_LOAD=ON \
+          -DHAVE_BCC_CREATE_MAP=ON \
+          -DHAVE_BCC_KFUNC=ON \
+          -DHAVE_BCC_USDT=ON \
+          -DHAVE_LIBBPF_1=ON \
+          -DHAVE_LIBBPF_MAP_BATCH=ON \
+          -DHAVE_LIBBPF_UPROBE_MULTI=ON \
+          -DBUILD_ASAN=OFF \
+          -DBUILD_SHARED_LIBS=OFF \
+          -DSTATIC_LINKING=ON \
+          -DLLVM_REQUESTED_VERSION=16
+          
+        # 构建
         make -j$(nproc) VERBOSE=1 || true
-
-        # 如果简化版构建失败，尝试使用原始CMake但禁用部分检查
-        if [ ! -f "src/bpftrace" ]; then
-            echo "简化构建失败，尝试修改原始CMake配置..."
-            cd ..
-            
-            # 备份原始CMakeLists.txt
-            cp CMakeLists.txt CMakeLists.txt.orig
-            
-            # 禁用版本检查
-            sed -i 's/if(LLVM_VERSION VERSION_LESS "16" OR LLVM_VERSION VERSION_GREATER "20")/if(FALSE)/g' CMakeLists.txt
-            sed -i 's/if(NOT LIBBPF_FOUND)/if(FALSE)/g' CMakeLists.txt
-            sed -i 's/include(${CMAKE_SOURCE_DIR}\/cmake\/FindBPF.cmake)/set(BPF_INCLUDE_DIRS "\/usr\/include")\nset(BPF_LIBRARIES "")/g' CMakeLists.txt
-            
-            # 在要求libbpf 1.5的地方修改
-            sed -i 's/message(FATAL_ERROR "bpftrace requires libbpf 1.5 or greater")/message(STATUS "Skipping libbpf version check")/g' CMakeLists.txt
-            
-            # 创建构建目录
-            mkdir -p build-android-arm64
-            cd build-android-arm64
-            
-            # 配置bpftrace构建
-            LLVM_REQUESTED_VERSION=16 cmake .. \
-              -DCMAKE_TOOLCHAIN_FILE=../arm64_toolchain.cmake \
-              -DCMAKE_BUILD_TYPE=Release \
-              -DBUILD_TESTING=OFF \
-              -DENABLE_MAN=OFF \
-              -DUSE_SYSTEM_BPF_BCC=OFF \
-              -DENABLE_SKP_DWARF=OFF \
-              -DENABLE_LLVM_JIT=OFF \
-              -DLIBBPF_LIBRARIES=/usr/lib64/libbpf.a \
-              -DLIBBPF_INCLUDE_DIRS=/usr/include \
-              -DLIBBCC_LIBRARIES=/usr/lib/libbcc.a \
-              -DLIBBCC_INCLUDE_DIRS=/usr/include \
-              -DHAVE_LIBBCC_PERF_READER_OPEN_PERF_EVENT=OFF \
-              -DHAVE_BCC_PROG_LOAD=ON \
-              -DHAVE_BCC_CREATE_MAP=ON \
-              -DHAVE_BCC_KFUNC=ON \
-              -DHAVE_BCC_USDT=ON \
-              -DHAVE_LIBBPF_1=ON \
-              -DHAVE_LIBBPF_MAP_BATCH=ON \
-              -DHAVE_LIBBPF_UPROBE_MULTI=ON \
-              -DBUILD_ASAN=OFF \
-              -DBUILD_SHARED_LIBS=OFF \
-              -DSTATIC_LINKING=ON \
-              -DLLVM_REQUESTED_VERSION=16
-              
-            # 构建
-            make -j$(nproc) VERBOSE=1 || true
-        fi
-        
-        # 检查两个可能的构建位置
-        if [ -f "src/bpftrace" ]; then
-            BPFTRACE_PATH="src/bpftrace"
-        elif [ -f "../build-android-arm64/src/bpftrace" ]; then
-            BPFTRACE_PATH="../build-android-arm64/src/bpftrace"
-        else
-            echo "构建失败 - 找不到bpftrace二进制文件!"
-            exit 1
-        fi
         
         # 检查是否有bpftrace可执行文件
-        echo "构建成功!"
-        file "$BPFTRACE_PATH"
-        
-        # 创建发布包
-        mkdir -p release/android-arm64
-        cp "$BPFTRACE_PATH" release/android-arm64/
-        
-        # 找到tools目录
-        if [ -d "../tools" ]; then
-            cp -r ../tools release/android-arm64/
+        if [ -f "src/bpftrace" ]; then
+          echo "构建成功!"
+          file "src/bpftrace"
+          
+          # 创建发布包
+          mkdir -p release/android-arm64
+          cp "src/bpftrace" release/android-arm64/
+          cp -r /bpftrace/tools release/android-arm64/ || true
+          chmod +x release/android-arm64/tools/*.bt 2>/dev/null || true
+          tar -czf /bpftrace/bpftrace-android-arm64-static.tar.gz -C release android-arm64
         else
-            cp -r /bpftrace/tools release/android-arm64/
+          echo "构建失败 - 找不到bpftrace二进制文件!"
+          
+          # 显示CMake日志以帮助调试
+          echo "==== CMake错误日志 ===="
+          cat CMakeFiles/CMakeError.log || true
+          echo "==== CMake输出日志 ===="
+          cat CMakeFiles/CMakeOutput.log || true
+          
+          exit 1
         fi
-        
-        chmod +x release/android-arm64/tools/*.bt
-        tar -czf /bpftrace/bpftrace-android-arm64-static.tar.gz -C release android-arm64
         EOF
 
         chmod +x build-android-arm64.sh
